# neebell_api

./: Cargo.toml
src/: main.rs
src/model/: forum.rs  user.rs
src/routes/: forum.rs  user.rs
src/util/: error.rs  fields.rs  mod.rs
