[package]
name = "api_neebell"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.23"
rocket = {version = "0.5.0-rc.1", features = ["tls", "json", "secrets"]}
mongodb = {version = "2.1.0", features = ["bson-chrono-0_4"]}
lazy_static = "1.4.0"
regex = "1.5.6"
sodiumoxide = "0.2.7"
toml = "0.5.8"
